<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        tools:context=".GraphSettings">

        <LinearLayout
            android:id="@+id/moving_average_smoothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".GraphSettings">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_smoothing"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/smoothing_entry"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="Folder Name"
                android:background="@null"
                android:hint="Value"
                android:inputType="number"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:textAlignment="center"
                android:textColor="@color/graph_color"
                android:textSize="20sp"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/x_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".GraphSettings"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_xmax"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/x_max_entry"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="Folder Name"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:hint="Minutes"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/graph_color"
                android:textSize="20sp"
                android:background="@null"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/x_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".GraphSettings">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_xmin"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/x_min_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="Folder Name"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:hint="Minutes"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/graph_color"
                    android:textSize="20sp"
                    android:background="@null"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:id="@+id/y_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".GraphSettings"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_ymax"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/y_max_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="Folder Name"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:hint="  MHz  "
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/graph_color"
                    android:textSize="20sp"
                    android:background="@null"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/y_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".GraphSettings">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_ymin"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/y_min_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="Folder Name"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:hint="  MHz  "
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/graph_color"
                    android:textSize="20sp"
                    android:background="@null"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:id="@+id/setsettingsButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_name"
            android:textAlignment="center"
            android:textColor="@color/graph_color"
            android:textSize="20sp"
            android:background="@drawable/cylinder_button"/>
    </LinearLayout>

</LinearLayout>